fix scrollbar overload

--- a/src/styling/App.scss
+++ b/src/styling/App.scss
@@ -20,7 +20,7 @@ body,
 #root {
     padding: 0;
     margin: 0;
-    overflow: scroll;
+    overflow: hidden;
     height: 100vh;
     width: 100vw;
 }
@@ -261,6 +261,11 @@ textarea {
 #home {
     height: $contentHeight;
     text-align: center;
+
+    h1 {
+        margin: 0;
+        padding: 20px;
+    }
 
     #userEmail {
         font-size: 20px;
